Change Drawing script

--- a/Individual_training_centralized.ipynb
+++ b/Individual_training_centralized.ipynb
@@ -760,31 +760,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gen_cdf(l, m, stage_lens = [0, 0.2, 1], stages = [0.8, 0.2]):\n",
-    "\n",
-    "  result = np.zeros(shape = (l,))\n",
-    "  result[-1] = m\n",
-    "\n",
-    "  for i, stage in enumerate(stages):\n",
-    "      stage_start = int(stage_lens[i] * l)\n",
-    "      stage_end = int(stage_lens[i + 1] * l)\n",
-    "      step_size = 2 * m * stage / (stage_end - stage_start) \n",
-    "      for j in range(stage_start, stage_end):\n",
-    "        if j > 0:\n",
-    "          result[j] = result[j - 1] + np.random.random(1) * step_size\n",
-    "        else:\n",
-    "          result[j] = np.random.random(1) * step_size\n",
-    "\n",
-    "\n",
-    "  return  result"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
@@ -846,13 +821,12 @@
     "        else:\n",
     "            r = np.array(r)\n",
     "            results[label] += np.array(r)\n",
-    "results[\"dist\"] = gen_cdf(350,0.6,stage_lens = [0, 0.2,0.5,0.8,1], stages = [0.3,0.4,0.2,0.3]) + 13.4 + np.random.rand(350)*0.45\n",
     "\n",
     "plt.figure(figsize = (20,10))\n",
     "# if label == \"centralized\":\n",
     "#     label_n = \"Centralized_RL\"\n",
     "plt.plot(savgol_filter(results[\"avg.pkl\"], 21, 1)/(len(dirs)-1),c = \"red\",lw=5 ,ls=\"-\", label = \"Average\")\n",
-    "plt.plot(savgol_filter(results[\"dist\"], 21, 1),c = \"blue\",lw=5 ,ls=\"-\", label = \"Discounted\")\n",
+    "plt.plot(savgol_filter(results[\"dist.pkl\"], 21, 1),c = \"blue\",lw=5 ,ls=\"-\", label = \"Discounted\")\n",
     "plt.xlabel(\"Training Epochs\", fontsize=24, weight=\"bold\")\n",
     "plt.ylabel(\"Average Reward\", fontsize=24, weight=\"bold\")\n",
     "matplotlib.rc('font', **font)\n",
