--- a/Individual_training_centralized.ipynb
+++ b/Individual_training_centralized.ipynb
@@ -26,9 +26,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ENV'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtqdm\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnotebook\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m tqdm\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m#from ENV import KYenv\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01menvs\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m KYenv \u001b[38;5;28;01mas\u001b[39;00m Env\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mDRQN_controller\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DRQN_Agent\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mDRQN_learner\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m QLearner\n",
+      "File \u001b[0;32m/sfs/qumulo/qhome/ky9tc/workarea/Dino-rl/envs/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mENV\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01menv\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Env\n\u001b[1;32m      2\u001b[0m KYenv \u001b[38;5;241m=\u001b[39m Env\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mENV\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01menv0\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Env\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ENV'"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import torch\n",
@@ -41,7 +54,7 @@
     "from tqdm.notebook import tqdm\n",
     "\n",
     "#from ENV import KYenv\n",
-    "from ENV import KYenv as Env\n",
+    "from envs import KYenv as Env\n",
     "from DRQN_controller import DRQN_Agent\n",
     "from DRQN_learner import QLearner\n",
     "from DRQN_agent import decode_act,get_decay\n",
